--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx esbuild src/component.tsx --bundle --format=esm --outfile=dist/component.js && cp index.html dist/index.html"
+    "build": "npx esbuild src/component.tsx --bundle --format=esm --outfile=dist/component.js && cp index.html dist/index.html",
+    "start": "npx esbuild src/component.tsx --bundle --format=esm --outfile=dist/component.js --servedir=dist --serve=8000 --watch"
   },
   "keywords": [],
   "author": "",
