--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx esbuild src/component.tsx src/component-front.tsx --bundle --format=esm --outdir=dist && cp index.html dist/index.html",
+    "build:detail": "npx esbuild src/pokemon-detail.tsx --bundle --format=esm --outfile=dist/pokemon-detail.js",
+    "detail": "npm run build:detail -- --servedir=dist --serve=8001 --watch",
+    "build": "npx esbuild src/component.tsx src/pokemon-detail.tsx --bundle --format=esm --outdir=dist && cp index.html dist/index.html",
     "start": "npx esbuild src/component.tsx --bundle --format=esm --outfile=dist/component.js --servedir=dist --serve=8000 --watch"
   },
   "keywords": [],
