--- a/web/package.json
+++ b/web/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:detail": "npx esbuild src/pokemon-detail.tsx --bundle --format=esm --outfile=dist/pokemon-detail.js",
-    "detail": "npm run build:detail -- --servedir=dist --serve=8001 --watch",
-    "build": "npx esbuild src/component.tsx src/pokemon-detail.tsx --bundle --format=esm --outdir=dist && cp index.html dist/index.html",
-    "start": "npx esbuild src/component.tsx --bundle --format=esm --outfile=dist/component.js --servedir=dist --serve=8000 --watch"
+    "typecheck": "tsc --noEmit",
+    "bundle": "npx esbuild src/entries/component.tsx src/entries/pokemon-detail.tsx --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap",
+    "build": "npm run typecheck && npm run bundle && cp index.html dist/index.html",
+    "start": "npx esbuild src/entries/component.tsx --bundle --format=esm --outfile=dist/component.js --servedir=dist --serve=8000 --watch"
   },
   "keywords": [],
   "author": "",
