--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc -b && node dist/index.js"
+    "build:web": "npm --prefix ../web run build",
+    "typecheck": "tsc -b --noEmit",
+    "build": "npm run build:web && tsc -b",
+    "start": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
