--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build:web": "npm --prefix ../web run build",
     "typecheck": "tsc -b --noEmit",
-    "build": "npm run build:web && tsc -b",
-    "start": "npm run build && node dist/index.js"
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "deploy:install": "npm install && cd ../web && npm install && npm run build && cd ../server && npm run build"
   },
   "keywords": [],
   "author": "",
