--- a/web/package.json
+++ b/web/package.json
@@ -15,12 +15,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ladle/react": "^5.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "esbuild": "^0.25.12",
     "typescript": "^5.9.3"
   }
