--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,5 +21,6 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
