--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.9",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.20",
