fix: const weather api key

--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit",
-    "bundle": "npx esbuild \"src/entries/*.tsx\" --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap",
+    "bundle": "npx esbuild \"src/entries/*.tsx\" --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap --define:__WEATHER_API_KEY__='\"'\"$WEATHER_API_KEY\"'\"'",
     "build": "npm run typecheck && npm run bundle && npm run build:css && cp index.html dist/index.html",
     "build:css": "npx tailwindcss -i src/styles.css -o dist/styles.css",
     "start": "npm run build && npx esbuild src/entries/flight-detail.tsx --bundle --format=esm --outfile=dist/flight-detail.js --servedir=dist --serve=3030 --watch",
