Squashed commit of the following:
commit 5b578096f5feb61eaaf1656ed90e25def6fc08ec
Author: ivanromog <94523364+ivanromog@users.noreply.github.com>
Date:   Wed Jan 28 11:52:04 2026 +0100

    Add mock data for car products in JSON format (#4)

    * Add mock data for car products in JSON format

    - Introduced a new JSON file containing mock data for various car products.
    - Each product includes attributes such as SKU, name, price, media gallery, and custom attributes.
    - The data is structured to support filtering by category and includes a total count of products.

    * refactor: replace rental car widget with car dashboard widget and clean up related code

    * fix: replace hardcoded API key with environment variable for car API requests

    * feat: implement car dashboard component and update storybook references

    * feat: register car dashboard tool in tools index

    * feat: implement car dashboard and remove rental car components

    * fix: change log level from console.log to console.error for fetching car catalog

    * feat: update widget CSP to include new API domain and enhance error logging for car catalog fetching

    * feat: update car dashboard widget to use Magento Cloud API and enhance error handling

    * feat: update Magento API base URL to include products endpoint for car catalog

    * feat: update Magento API base URL to correct endpoint for product fetching

    * feat: update search criteria to filter products by category ID instead of status

    * feat: refactor CarAIRentingResults to use toolOutput directly and add MockToolOutput for storybook

    * feat: enhance CarAIRentingResults to fetch car data from toolOutput and update mock data with new car entries

    * feat: update CarAIRentingResults export to default and adjust import in stories

    * feat: integrate ReactDOM for rendering CarAIRentingResults and add initial export

    * feat: update CarDetail component to replace commented image URL with a direct link



--- a/web/package.json
+++ b/web/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit",
-    "bundle": "npx esbuild src/entries/component.tsx src/entries/pokemon-detail.tsx src/entries/test.tsx --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap",
-    "build": "npm run typecheck && npm run bundle && cp index.html dist/index.html",
-    "start": "npx esbuild src/entries/component.tsx --bundle --format=esm --outfile=dist/component.js --servedir=dist --serve=8000 --watch"
+    "bundle": "npx esbuild \"src/entries/*.tsx\" --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap --define:__WEATHER_API_KEY__='\"'\"$WEATHER_API_KEY\"'\"'",
+    "build": "npm run typecheck && npm run bundle && npm run build:css && cp index.html dist/index.html",
+    "build:css": "npx tailwindcss -i src/styles.css -o dist/styles.css",
+    "start": "npm run build && npx esbuild src/entries/flight-detail.tsx --bundle --format=esm --outfile=dist/flight-detail.js --servedir=dist --serve=3030 --watch",
+    "ladle": "npx ladle serve"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +18,20 @@
   "description": "",
   "dependencies": {
     "@ladle/react": "^5.1.1",
+    "flowbite": "^4.0.1",
+    "flowbite-react": "^0.12.16",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.9",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.20",
     "esbuild": "^0.25.12",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3"
   }
 }
