--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "typecheck": "tsc -b --noEmit",
     "build": "tsc -b",
     "start": "node dist/index.js",
+    "start:http": "MCP_HTTP=true node dist/index.js",
     "deploy:install": "npm install && cd ../web && npm install && npm run build && cd ../server && npm run build"
   },
   "keywords": [],
