--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "dependencies": {
     "@ladle/react": "^5.1.1",
+    "@modelcontextprotocol/ext-apps": "^1.0.1",
     "flowbite": "^4.0.1",
     "flowbite-react": "^0.12.16",
     "react": "^19.2.0",
