feat: item dashboard

--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "workspaces":[
+    "server", "web"
+  ],
   "scripts": {
+    "web": "cd web && npm run start:ps",
+    "server": "cd server && npm run build && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
