--- a/web/package.json
+++ b/web/package.json
@@ -7,9 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit",
     "bundle": "npx esbuild \"src/entries/*.tsx\" --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap --define:__WEATHER_API_KEY__='\"'\"$WEATHER_API_KEY\"'\"'",
+    "bundle:ps": "npx esbuild \"src/entries/*.tsx\" --bundle --format=esm --outdir=dist --entry-names=[name] --sourcemap --define:__WEATHER_API_KEY__='\"$WEATHER_API_KEY\"'",
     "build": "npm run typecheck && npm run bundle && npm run build:css && cp index.html dist/index.html",
+    "build:ps": "npm run typecheck && npm run bundle:ps && npm run build:css && copy index.html dist\\index.html",
     "build:css": "npx tailwindcss -i src/styles.css -o dist/styles.css",
     "start": "npm run build && npx esbuild src/entries/flight-detail.tsx --bundle --format=esm --outfile=dist/flight-detail.js --servedir=dist --serve=3030 --watch",
+    "start:ps": "npm run build:ps && npx esbuild src/entries/item-dashboard.tsx --bundle --format=esm --outfile=dist/item-dashboard.js --servedir=dist --serve=3030 --watch",
     "ladle": "npx ladle serve"
   },
   "keywords": [],
