--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.21.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "zod": "^3.25.76"
   },
